@@ -679,7 +679,7 @@ int igraph_i_mincut_undirected(const igraph_t *graph,
  */
 
 int igraph_mincut(const igraph_t *graph,
-		  igraph_integer_t *value,
+		  igraph_real_t *value,
 		  igraph_vector_t *partition,
 		  igraph_vector_t *partition2,
 		  igraph_vector_t *cut,
